<resources>
    <string name="app_name" translatable="false">My Application</string>
    <string name="title_android" translatable="false">Formação Android Developer Dio</string>
    <string name="fundamentos_geral_do_mercado_de_desenvolvimento_mobile" translatable="false">Fundamentos Geral do Mercado de Desenvolvimento Mobile</string>
    <string name="vis_o_geral_do_mercado_de_desenvolvimento_mobile" translatable="false">Visão Geral do Mercado de Desenvolvimento Mobile</string>
    <string name="instalando_e_configurando_o_android_studio" translatable="false">Instalando e Configurando o Android Studio</string>
    <string name="entendendo_a_estrutura_e_depurando_apps_android" translatable="false">Entendendo a Estrutura e Depurando Apps Android</string>
    <string name="criando_um_app_android_com_suporte_a_v_rios_idiomas" translatable="false">Criando um App Android com Suporte a Vários Idiomas</string>
    <string name="materiais_complementares" translatable="false">Materiais Complementares</string>

</resources>